[package]
name = "aoc_2023"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.75"
clap = { version = "4.4.7", features = ["derive"] }
indexmap = "2.7.0"
itertools = "0.12.0"
nalgebra = "0.33.2"
num = "0.4.1"
priority-queue = "2.1.1"
rayon = "1.10.0"
regex = "1.10.2"
strum = "0.26.3"
strum_macros = "0.26.4"
